tests/ui/hygiene/rustc_res/private_ctor_not_available_in_same_scope_through_reexport.stderr
error[E0423]: expected function, tuple struct or tuple variant, found struct `crate::def::S`
  --> tests/ui/hygiene/rustc_res/private_ctor_not_available_in_same_scope_through_reexport.rs:13:21
   |
13 |             let _ = crate::def::S(0);
   |                     ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
