tests/ui/hygiene/rustc_res/private_ctor_not_available_in_same_scope_through_reexport.rs
//@ fail
//@ stderr

#![allow(unused)]

mod def {
    use inner::S;

    mod inner {
        pub struct S(u32);

        fn f() {
            let _ = crate::def::S(0);
        }
    }
}
